hard-gists/8638475/run.log
=== Docker Run Log for 8638475 ===
Started at: Mi 29. Okt 17:52:04 CET 2025

[2025-10-29 17:52:05] START: Running container for 8638475
[2025-10-29 17:52:05] SUCCESS: Container 42cd063e210fabdfab62a3601dd73a2ce5cfccacf928317b4c2a62556d36ebdb started for 8638475
=== Container logs for 8638475 ===
  File "/snippet.py", line 31
    print 'Press any key to exit...'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8638475 ===
[2025-10-29 17:52:07] INFO: Container 42cd063e210fabdfab62a3601dd73a2ce5cfccacf928317b4c2a62556d36ebdb has stopped
